--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,8 +5,8 @@ name: Code Quality & Tests
 on:
   push:
     branches:
-      - main # main 브랜치에 PUSH 될 때 실행
-  pull_request: # PR 요청 시 실행
+      - main
+  pull_request:
 
 jobs:
   ci:
@@ -35,29 +35,22 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-        cache: 'pip'
+        cache: 'pip' # uv 대신 기본 pip 캐시를 사용하도록 설정 (권장)
 
-    - name: Install uv and Set PATH
-      run: |
-        # uv 설치
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        
-        # PATH 설정: uv 실행 경로와 가상 환경 바이너리 경로 추가
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-        echo "$HOME/.venv/bin" >> $GITHUB_PATH
+    # ✅ uv run 명령을 사용하지 않기 때문에 이 단계는 제거되었습니다.
 
     - name: Install Dependencies
-      run: uv sync
+      # ✅ GitHub Actions 환경의 pip를 사용하여 의존성 설치
+      run: pip install -r requirements.txt
 
     - name: Run Ruff (Linting & Formatting Check)
-      run: uv run ruff check .
+      # ✅ 'uv run' 대신 'python -m'을 사용하여 ruff 모듈 실행
+      run: python -m ruff check .
 
     - name: Run Django Migration & Tests
       env:
-        # Secrets에서 DB 접속 정보를 가져와 환경 변수로 설정
         DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${{ secrets.DB_NAME }}
       run: |
-        # 1. 마이그레이션 실행
-        uv run python manage.py migrate --no-input
-        # 2. 테스트 실행
-        uv run python manage.py test
+        # ✅ 'uv run' 대신 기본 Python 실행
+        python manage.py migrate --no-input
+        python manage.py test
