--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
 asgiref==3.10.0
-Django==5.2.7
+autoflake==2.3.1
+black==25.9.0
+cfgv==3.4.0
+click==8.3.0
+distlib==0.4.0
+django==5.2.7
+django-environ==0.12.0
+djangorestframework==3.16.1
+filelock==3.19.1
+identify==2.6.15
+mypy-extensions==1.1.0
+nodeenv==1.9.1
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.4.0
+pre-commit==4.3.0
 psycopg2-binary==2.9.10
+pyflakes==3.4.0
+pytokens==0.1.10
+pyyaml==6.0.3
 sqlparse==0.5.3
+virtualenv==20.34.0
