--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -35,18 +35,25 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-        cache: 'pip' # pip 캐시 사용
 
-    # 1. 의존성 설치 (requirements.txt 사용)
-    - name: Install Dependencies
-      # pip install로 모든 패키지 설치
-      run: pip install -r requirements.txt
+    # 1. uv 설치 및 PATH 설정
+    - name: Install uv
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.cargo/bin" >> $GITHUB_PATH # uv 명령어 찾기
 
-    # 2. ruff 실행
+    # 2. 의존성 설치 및 환경 활성화 (핵심 수정)
+    - name: Install Dependencies and Activate Venv
+      run: |
+        uv sync
+        # uv가 만든 가상환경(.venv)의 bin 폴더를 PATH에 추가하여 
+        # ruff 모듈을 찾을 수 있게 만듭니다.
+        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+
+    # 3. ruff 실행 (python -m 사용)
     - name: Run Ruff (Linting & Formatting Check)
       run: python -m ruff check .
 
-    # 3. 테스트 실행
     - name: Run Django Migration & Tests
       env:
         DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${{ secrets.DB_NAME }}
