--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,7 +32,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python 3.12
-      uses: actions:setup-python@v5
+      # ✅ 수정된 부분: 콜론(:)을 슬래시(/)로 변경했습니다.
+      uses: actions/setup-python@v5
       with:
         python-version: '3.12'
 
@@ -45,15 +46,18 @@ jobs:
     # 2. 의존성 설치 및 가상 환경 경로 PATH 추가
     - name: Install Dependencies and Activate Venv
       run: |
-        # ✅ uv sync만 실행 (기본적으로 개발 의존성 포함 설치)
+        # uv sync만 실행
         uv sync 
         # ruff가 설치된 가상환경 경로를 PATH에 추가
         echo "$PWD/.venv/bin" >> $GITHUB_PATH
 
-    # 3. ruff 실행 (python -m으로 PATH 오류 우회)
+    # 3. ruff 실행
     - name: Run Ruff (Linting & Formatting Check)
       run: python -m ruff check .
 
     - name: Run Django Migration & Tests
       env:
-        DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${
+        DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${{ secrets.DB_NAME }}
+      run: |
+        python manage.py migrate --no-input
+        python manage.py test
