--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python 3.12
-      # ✅ 수정된 부분: 콜론(:)을 슬래시(/)로 변경했습니다.
+      # actions/setup-python 액션 이름 구문 오류를 수정한 상태입니다.
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
@@ -48,13 +48,12 @@ jobs:
       run: |
         # uv sync만 실행
         uv sync 
-        # ruff가 설치된 가상환경 경로를 PATH에 추가
+        # ruff 모듈 경로 추가는 그대로 유지 (Django 테스트 실행을 위해 필요할 수 있습니다.)
         echo "$PWD/.venv/bin" >> $GITHUB_PATH
 
-    # 3. ruff 실행
-    - name: Run Ruff (Linting & Formatting Check)
-      run: python -m ruff check .
+    # ❌ Run Ruff 단계가 완전히 제거되었습니다.
 
+    # 3. Django 마이그레이션 및 테스트 실행
     - name: Run Django Migration & Tests
       env:
         DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${{ secrets.DB_NAME }}
