--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,7 +32,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python 3.12
-      # actions/setup-python 액션 이름 구문 오류를 수정한 상태입니다.
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
@@ -46,16 +45,13 @@ jobs:
     # 2. 의존성 설치 및 가상 환경 경로 PATH 추가
     - name: Install Dependencies and Activate Venv
       run: |
-        # uv sync만 실행
         uv sync 
-        # ruff 모듈 경로 추가는 그대로 유지 (Django 테스트 실행을 위해 필요할 수 있습니다.)
         echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
-    # ❌ Run Ruff 단계가 완전히 제거되었습니다.
 
     # 3. Django 마이그레이션 및 테스트 실행
     - name: Run Django Migration & Tests
       env:
+        # ✅ 호스트 이름을 localhost로 수정했습니다!
         DATABASE_URL: postgres://${{ secrets.DB_USER }}:${{ secrets.DB_PASSWORD }}@localhost:5432/${{ secrets.DB_NAME }}
       run: |
         python manage.py migrate --no-input
