--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ docker-compose.override.yml
 # PyCharm
 # ----------------------
 .idea/
+.idea/workspace.xml
 
 # ----------------------
 # VSCode (선택)
