초기 users 앱 migrations 생성 및 JWT 테스트 코드 추가

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.12.2"
 dependencies = [
     "django==5.2.7",
     "djangorestframework", # DRF
+    "rest-framework-simplejwt",
     "pre-commit",
     "autoflake",
     "black",
