--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,29 @@ black==25.9.0
 cfgv==3.4.0
 click==8.3.0
 distlib==0.4.0
-django==5.2.7
+Django==5.2.7
 django-environ==0.12.0
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 filelock==3.19.1
 identify==2.6.15
-mypy-extensions==1.1.0
+iniconfig==2.1.0
+mypy_extensions==1.1.0
 nodeenv==1.9.1
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.4.0
-pre-commit==4.3.0
+pluggy==1.6.0
+pre_commit==4.3.0
 psycopg2-binary==2.9.10
 pyflakes==3.4.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.2
+python-dotenv==1.1.1
 pytokens==0.1.10
-pyyaml==6.0.3
+PyYAML==6.0.3
+ruff==0.13.3
 sqlparse==0.5.3
+uv==0.8.23
 virtualenv==20.34.0
-dj-database-url
-python-dotenv
