--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/usr/src/app
+      - .:/app
     ports:
       - "8000:8000"
     depends_on:
